# update_partial_repo

./: Cargo.toml
migrations/: 20230620045138_initial.sql
src/: main.rs  model.rs
