[package]
name = "ormlite-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ormlite = { version = "0.14.2", features = ["sqlite"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.10.0"